UserAgentDialog: Use QUrl::host on user URL input

The system internally works with QUrl::host to compare the visited and
stored addresses to set UserAgent.

BUG: 497223

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>